// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract/monorepo .extractPackageFile() updates internal packages 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "depName": "@org/a",
      },
      Object {
        "depName": "@org/b",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "foo",
      },
    ],
    "lernaPackages": Array [
      "packages/*",
    ],
    "managerData": Object {
      "lernaJsonFile": "lerna.json",
    },
    "packageFile": "package.json",
    "packages": Array [
      "packages/*",
    ],
  },
  Object {
    "deps": Array [
      Object {
        "depName": "@org/b",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "bar",
      },
    ],
    "lernaClient": undefined,
    "managerData": Object {
      "lernaJsonFile": "lerna.json",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "yarnLock": undefined,
  },
  Object {
    "lernaClient": undefined,
    "managerData": Object {
      "lernaJsonFile": "lerna.json",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract/monorepo .extractPackageFile() uses lerna package settings 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "depName": "@org/a",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/b",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "foo",
      },
    ],
    "lernaPackages": Array [
      "packages/*",
    ],
    "managerData": Object {
      "lernaJsonFile": "lerna.json",
    },
    "packageFile": "package.json",
    "packages": Array [
      "packages/*",
    ],
  },
  Object {
    "deps": Array [
      Object {
        "depName": "@org/b",
        "skipReason": "internal-package",
      },
      Object {
        "depName": "@org/c",
      },
      Object {
        "depName": "bar",
      },
    ],
    "lernaClient": undefined,
    "managerData": Object {
      "lernaJsonFile": "lerna.json",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "yarnLock": undefined,
  },
  Object {
    "lernaClient": undefined,
    "managerData": Object {
      "lernaJsonFile": "lerna.json",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract/monorepo .extractPackageFile() uses yarn workspaces package settings with lerna 1`] = `
Array [
  Object {
    "lernaClient": "yarn",
    "lernaPackages": Array [
      "oldpackages/*",
    ],
    "managerData": Object {
      "lernaJsonFile": "lerna.json",
    },
    "packageFile": "package.json",
    "yarnWorkspacesPackages": Array [
      "packages/*",
    ],
  },
  Object {
    "lernaClient": "yarn",
    "managerData": Object {
      "lernaJsonFile": "lerna.json",
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "yarnLock": undefined,
  },
  Object {
    "lernaClient": "yarn",
    "managerData": Object {
      "lernaJsonFile": "lerna.json",
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract/monorepo .extractPackageFile() uses yarn workspaces package settings without lerna 1`] = `
Array [
  Object {
    "packageFile": "package.json",
    "yarnWorkspacesPackages": "packages/*",
  },
  Object {
    "hasYarnWorkspaces": true,
    "lernaClient": undefined,
    "managerData": Object {
      "lernaJsonFile": undefined,
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "yarnLock": "yarn.lock",
  },
  Object {
    "lernaClient": undefined,
    "managerData": Object {
      "lernaJsonFile": undefined,
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "yarnLock": undefined,
  },
]
`;
